Fixed: Dropdown menu links are invisible due to font color.
OHM-10
My Classes dropdown menu has white font with white background,
so text is not easily readable.

--- a/themes/lumen.css
+++ b/themes/lumen.css
@@ -435,6 +435,12 @@ span.formright {
 	color:#AE131E;
 	font-weight: normal;
 }
+ul.courselist > li > a {
+	color: #1E74D1 !important;
+}
+.tablist > li > a {
+	color: #444 !important;
+}
 #header-menu-items {
 	color: #fff;
 }
